FIX: touch on labels on mobile

--- a/style.css
+++ b/style.css
@@ -166,6 +166,15 @@ body {
     padding-right: 30px;
 }
 
+.items-left{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .items-statuses {
     display: flex;
     justify-content: center;
@@ -174,11 +183,23 @@ body {
 .items-statuses span  {
     padding: 0 4px;
     cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .items-clear {
     cursor: pointer;
     text-align: end;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .items-statuses span:hover, .items-clear:hover {
@@ -187,6 +208,12 @@ body {
 
 .items-statuses .active  {
     color: hsl(220, 98%, 61%);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .todo-item:hover {
